--- a/index.html
+++ b/index.html
@@ -241,21 +241,54 @@
                     <li>Renovation</li>
                 </ul>
             </section>
-
             <section class="footer-address">
                 <h2>Address</h2>
                 <address>
-                    lorem ipsum,<br />
-                    dolor sit,<br />
-                    amet consectetur
+                    Lahore<br />
+                    Swat,
+                    Pakistan
                 </address>
             </section>
 
             <section class="footer-contact">
                 <h2>Contact</h2>
-                <span>+9145343234349</span>
-                <span>lorem@gmail.com</span>
-            </section>
+                <span>+923369703915</span>
+                <span>khayal.o.kamal@gmail.com</span>
+                <span style="display: flex; align-items: center; justify-content: space-between;">
+                    <a href="https://pk.linkedin.com/in/kamaly-khan-3b2238168" target="_blank" class="social-link">
+                        <img src="linkedin-icon.png" alt=" ">
+                    </a>
+
+                    <!-- YouTube -->
+                    <a href="https://www.youtube.com/channel/UCBCiY-8rPwym-SiyA_S6KPA" target="_blank" title="youtube"
+                        class="social-link">
+                        <img src="youtube-icon.png" alt=" ">
+                    </a>
+
+                    <!-- Behance -->
+                    <a href="https://www.behance.net/kamalykhan" target="_blank" class="social-link">
+                        <img src="behance-icon.png" alt=" ">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/File:Kamaly.jpg" target="_blank" class="social-link">
+                        <img src="wikipedia-icon.png" alt=" ">
+                    </a>
+
+                    <!-- CGSociety -->
+                    <a href="https://kamaly-khan.cgsociety.org/" target="_blank" class="social-link">
+                        <img src="cgsociety-icon.png" alt=" ">
+                    </a>
+
+                    <!-- Vimeo -->
+                    <a href="https://vimeo.com/user120432965" target="_blank" class="social-link">
+                        <img src="vimeo-icon.png" alt=" ">
+                    </a>
+
+                    <!-- Pinterest -->
+                    <a href="https://www.pinterest.com/kamalykhan/" target="_blank" class="social-link">
+                        <img src="pinterest-icon.png" alt=" ">
+                    </a>
+                </span>
+            </section  >
         </div>
     </footer>
 
