add social icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -216,9 +217,7 @@
                     <h3>Top 10 home interior design tips</h3>
 
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempore
-                        reprehenderit perferendis debitis nemo eveniet optio quasi amet corporis
-                        nostrum eaque possimus tempora error,
+                        kljkljlkljklj
                     </p>
 
                     <a class="more-link"><span>Read More</span>
@@ -241,6 +240,7 @@
                     <li>Renovation</li>
                 </ul>
             </section>
+
             <section class="footer-address">
                 <h2>Address</h2>
                 <address>
@@ -256,39 +256,39 @@
                 <span>khayal.o.kamal@gmail.com</span>
                 <span style="display: flex; align-items: center; justify-content: space-between;">
                     <a href="https://pk.linkedin.com/in/kamaly-khan-3b2238168" target="_blank" class="social-link">
-                        <img src="linkedin-icon.png" alt=" ">
+                        <i class="fa-brands fa-linkedin fa-beat-fade" style="color: #1278af;"></i>
                     </a>
 
                     <!-- YouTube -->
                     <a href="https://www.youtube.com/channel/UCBCiY-8rPwym-SiyA_S6KPA" target="_blank" title="youtube"
                         class="social-link">
-                        <img src="youtube-icon.png" alt=" ">
+                        <i class="fa-brands fa-youtube fa-beat-fade fa-lg" style="color: #e82121;"></i>
                     </a>
 
                     <!-- Behance -->
                     <a href="https://www.behance.net/kamalykhan" target="_blank" class="social-link">
-                        <img src="behance-icon.png" alt=" ">
+                        <i class="fa-brands fa-behance fa-bounce" style="color: blue;"></i>
                     </a>
                     <a href="https://en.wikipedia.org/wiki/File:Kamaly.jpg" target="_blank" class="social-link">
-                        <img src="wikipedia-icon.png" alt=" ">
+                        <i class="fa-brands fa-wikipedia-w fa-flip" style="color: #929db0;"></i>
                     </a>
 
                     <!-- CGSociety -->
                     <a href="https://kamaly-khan.cgsociety.org/" target="_blank" class="social-link">
-                        <img src="cgsociety-icon.png" alt=" ">
+                        <i class="fa-duotone fa-swap fa-spin"></i>
                     </a>
 
                     <!-- Vimeo -->
                     <a href="https://vimeo.com/user120432965" target="_blank" class="social-link">
-                        <img src="vimeo-icon.png" alt=" ">
+                        <i class="fa-brands fa-vimeo-v fa-fade"></i>
                     </a>
 
                     <!-- Pinterest -->
                     <a href="https://www.pinterest.com/kamalykhan/" target="_blank" class="social-link">
-                        <img src="pinterest-icon.png" alt=" ">
+                        <i class="fa-brands fa-pinterest fa-beat-fade" style="color: #f50f0f;"></i>
                     </a>
                 </span>
-            </section  >
+            </section>
         </div>
     </footer>
 
