--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
                     <!-- CGSociety -->
                     <a href="https://kamaly-khan.cgsociety.org/" target="_blank" class="social-link">
-                        <i class="fa-duotone fa-swap fa-spin" style=" color: yellow;"></i>
+                        <i class="fa-duotone fa-swap fa-spin" style=" color: rgb(109, 109, 92);"></i>
                     </a>
 
                     <!-- Vimeo -->
