--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
                     <!-- Vimeo -->
                     <a href="https://vimeo.com/user120432965" target="_blank" class="social-link">
-                        <i class="fa-brands fa-vimeo-v fa-fade"></i>
+                        <i class="fa-brands fa-vimeo-v fa-fade style=" color: #fff""></i>
                     </a>
 
                     <!-- Pinterest -->
