--- a/index.html
+++ b/index.html
@@ -275,12 +275,13 @@
 
                     <!-- CGSociety -->
                     <a href="https://kamaly-khan.cgsociety.org/" target="_blank" class="social-link">
-                        <i class="fa-duotone fa-swap fa-spin style=" color: #fff"></i>
+                        <i class="fa-solid fa-brush fa-spin-pulse" style="color: #566d95;"></i>
+
                     </a>
 
                     <!-- Vimeo -->
                     <a href="https://vimeo.com/user120432965" target="_blank" class="social-link">
-                        <i class="fa-brands fa-vimeo-v fa-fade style=" color: #fff""></i>
+                        <i class="fa-brands fa-vimeo-v fa-fade"></i>
                     </a>
 
                     <!-- Pinterest -->
