--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <h2>Contact</h2>
                 <span>+923369703915</span>
                 <span>khayal.o.kamal@gmail.com</span>
-                <span style="display: flex; align-items: center; justify-content: space-between;">
+                <span style="display: flex; align-items: center; justify-content: space-around;">
                     <a href="https://pk.linkedin.com/in/kamaly-khan-3b2238168" target="_blank" class="social-link">
                         <i class="fa-brands fa-linkedin fa-beat-fade" style="color: #1278af;"></i>
                     </a>
